src/App.css
* {
    margin: 0;
    padding: 0;
}

html,
body {
    width: 100vw;
}

.appt-schedule {
    text-align: center;
    padding-top: 1rem;
    padding-bottom: 1rem;
    font-size: 1rem;
    background-color: rgb(105, 77, 117);
    color: white;
    font-weight: bold;
    position: absolute;
    width: 100%;
}

.header-links {
    display: flex;
    list-style: none;
    justify-content: space-around;
    border-bottom: solid 2px rgb(105, 77, 117);
    padding: .5rem;
    padding-left: 15rem;
    margin-top: -2rem;
    padding-top: 1rem;
    background-color: #FAF9F6;
}

#appt-text .link {
    color: #FAF9F6;
    font-size: 1.1rem;
}

#appt-text:hover,
#link:hover,
.bag-hover {
    color: rgb(159, 194, 204);
    cursor: pointer;
}

.link,
.link:visited {
    color: rgb(105, 77, 117);
    text-decoration: none;
    font-size: 1.5rem;
    font-weight: bold;
}

#logo-large {
    width: 5vw;
    /* border-radius: 50px; */
    padding-left: 3rem;
    position: relative;
    top: 1rem;
}

.bag-hover {
    color: rgb(105, 77, 117);
    width: 2.25rem;
}

.badge {
    position: relative;
    left: 1.5rem;
    top: -2.5rem;
    background-color: rgb(105, 77, 117);
    width: 1rem;
    height: 1rem;
    border-radius: 50px;
    padding: .25rem;
    color: white;
    text-align: center;
}

#ring-img,
#store-img {
    border-bottom: solid 2px rgb(105, 77, 117);
    width: 100%;
}

.welcome-container {
    margin-top: 2rem;
}

#welcome-title,
h1 {
    text-align: center;
    font-size: 2.5rem;
    font-weight: bold;
    margin-bottom: 1rem;
    color: rgb(105, 77, 117);
    margin-top: 1rem;
}

.about-footer,
.team-footer,
.repair-footer,
.appraisal-footer,
.shop-footer,
.appointment-footer,
.cart-footer {
    text-align: center;
    margin-bottom: 1rem;
    color: rgb(105, 77, 117);
    background-color: #FAF9F6;
    padding-top: 1rem;
    margin-bottom: 0;
    border-top: solid 2px rgb(105, 77, 117);
    display: flex;
    justify-content: center;
    margin-top: 2rem;
    padding-bottom: 1rem;
}

#team-button-container,
#repair-button-container,
#appraisal-button-container,
#shop-button-container,
#cart-button-container,
#home-button-container {
    background-color: #FAF9F6;
    display: flex;
    justify-content: center;
    padding-bottom: 1rem;
}

#team-button,
#repair-button,
#appraisal-button,
#shop-button,
#cart-button,
#submit-button,
#home-button,
#checkout {
    padding: 1rem;
    background-color: rgb(105, 77, 117);
    padding: .5rem;
    color: white;
    font-weight: bold;
    margin-top: .5rem;
}

h2 {
    font-size: 1.25rem;
    font-weight: bold;
    padding-left: .5rem;
    padding-right: .5rem;
    color: rgb(105, 77, 117)
}

#welcome-info,
.about-paragraph,
#repair-paragraph,
.appraisal-paragraph,
.custom-paragraph {
    text-align: center;
    font-size: 1.5rem;
    margin-bottom: 1rem;
    color: rgb(105, 77, 117);
    width: 45rem;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 2rem;
}

.appraisal-pricing {
    text-align: center;
    font-size: 1.5rem;
    margin-bottom: 1rem;
    color: rgb(105, 77, 117);
    width: 45rem;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 2rem;
    font-weight: bold;
}

.material-symbols-outlined {
    font-size: 2.2rem;
    color: rgb(105, 77, 117);
}

.footer {
    display: flex;
    background-color: #FAF9F6;
    padding: 2rem;
    border-top: solid 2px rgb(105, 77, 117);
    justify-content: center;
}

.care-ship-gift-container {
    display: flex;
}

.care-container,
.shipping-container,
.gift-container {
    width: 15rem;
    padding: 2rem;
    text-align: center;
    color: rgb(105, 77, 117);
}

.care-container,
.shipping-container {
    border-right: solid 2px rgb(105, 77, 117);
}

#care-title,
#shipping-title,
#gift-title {
    margin-bottom: .25rem;
    font-weight: bold;
}

#logo-small {
    width: 7vw;
    padding-left: 3rem;
}

.bottom-footer {
    display: flex;
    background-color: rgb(105, 77, 117);
    padding: 1rem;
    justify-content: center;
    align-items: center;
}

#logo-small,
.contact-container,
.social-media-container,
.hours-container,
.links-container {
    padding: 3rem;
    color: white
}

#logo-small,
.contact-container,
.social-media-container,
.hours-container {
    border-right: solid 2px #FAF9F6;
    color: #FAF9F6;
    width: 10rem;
    height: 8rem;
}

#contact-title,
#social-title,
#hours-title {
    font-weight: bold;
    padding-bottom: 1rem;
}

.facebook-info,
.instagram-info {
    display: flex;
    padding-bottom: 1rem;
}

#instagram-icon {
    color: white;
    font-size: 1rem;
    padding-right: .5rem;
}

.devicon-facebook-plain {
    padding-right: .5rem;
}

#location-title,
#phone-title {
    font-weight: bold;
    padding-bottom: .5rem;
}

#location-info {
    padding-bottom: .5rem;
}

#diamond {
    font-size: 1.5rem;
}

.employee-container {
    display: flex;
    flex-wrap: wrap;
    gap: 4rem;
    justify-content: center;
    text-align: center;
    color: rgb(105, 77, 117);
}

.employee-image {
    width: 20rem;
    height: 20rem;
}

.employee-name {
    font-weight: bold;
    font-size: 1.5rem;
}

.repair-container1,
.appraisal-container,
.cart-page-container {
    display: flex;
    padding: 2rem;
    align-items: center;
    justify-content: center;
}

.custom-info-container {
    padding: 2rem;
}

.repair-info-container,
.appraisal-info-container {
    padding-left: 5rem;
}

#services-title {
    font-size: 1.75rem;
    font-weight: bold;
    padding-left: .5rem;
    padding-right: .5rem;
    color: rgb(105, 77, 117);
    text-decoration: underline;
}

.repair-services-list {
    margin-top: 1rem;
    padding-left: 1.75rem;
    color: rgb(105, 77, 117);
    font-size: 1.5rem;
}

#small-title {
    font-weight: bold;
    text-decoration: underline;
}

.img-info-custom-container,
.form-container {
    display: flex;
    padding: 2rem;
    justify-content: center;
    align-items: center;
}

.img-info-custom-container {
    border-bottom: solid 2px rgb(105, 77, 117);
}


.all-step-containers {
    background-color: #FAF9F6;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 2rem;
    border-bottom: solid 2px rgb(105, 77, 117);
}

.step-container {
    display: flex;
    color: rgb(105, 77, 117);
    width: 65rem;
    padding: 2rem;
    align-items: center;
}

.step-info-container {
    padding: 2.5rem;
}

#small-step-title {
    font-size: 1.1rem;
    font-weight: bold;
    padding-bottom: .5rem;
}

#large-step-title {
    font-size: 1.75rem;
    font-weight: bold;
    padding-bottom: .5rem;
}

.step-paragraph {
    padding-bottom: .75rem;
}

.form {
    display: flex;
    flex-direction: column;
    width: 50rem;
    align-items: center;
    font-size: 24px;
    color: rgb(105, 77, 117);
}

input,
select {
    padding: .25rem;
    color: rgb(105, 77, 117);
    font-size: 16px;
}

option {
    text-align: center;
}

#success {
    white-space: pre-wrap;
    width: 40rem;
    padding-top: 1rem;
    text-align: center;
    font-weight: bold;
}

.all-cards-container {
    display: flex;
    /* justify-content: space-around; */
    align-items: flex-end;
}

.card-button-container {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    flex-shrink: 1;
}

.items-container {
    display: flex;
    justify-content: space-around;
    align-items: flex-end;
    color: rgb(105, 77, 117);
}

.item-card {
    width: 25vw;
}

.img-container {
    display: flex;
    justify-content: center;
}

.item-image {
    width: 10rem;
    padding: 1rem;
}

.item-title {
    text-align: center;
    font-size: 1.5rem;
    padding-bottom: .5rem;
    font-weight: bold;
}

.item-description {
    padding-left: .5rem;
    padding-bottom: .5rem;
}

.price-rating-container {
    display: flex;
    justify-content: space-around;
    padding-top: .5rem;
    font-weight: bold;
}

.all-add-subt-button-container {
    text-align: center;
    padding-top: 1rem;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.add-subt-button-container {
    text-align: center;
    padding-top: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.item-input-count {
    width: 2rem;
    text-align: center;
    font-weight: bold;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=number] {
    -moz-appearance: textfield;
}

#subtract,
#add {
    font-size: 1.5rem;
    width: 2rem;
}

#cart-page-title {
    padding-bottom: 2rem;
}

.cart-img {
    height: 60vh;
    padding-right: 2rem;
}

.cart-items {
    background-color: white;
    width: 40%;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

#footer-links {
    text-decoration: underline;
    font-size: 1rem;
    padding-bottom: .5rem;
    color: white;
}

.checkout-cart-container {
    display: flex;
    width: 75%;
    padding-bottom: 2rem;
    padding-left: 2rem;
    color: rgb(105, 77, 117);
}

#checkout-cart-image {
    width: 20%;
    
}

.checkout-quantity-and-price-container {
    display: flex;
    justify-content: space-between;
}

.checkout-all-info-container {
    padding-left: 2rem;
    margin-top: .5rem;
}

#checkout-cart-title {
    font-weight: bold;
    padding-bottom: 1rem;
}

#total-cart-value {
    text-align: center;
    padding-top: 1rem;
    font-size: 2rem;
    font-weight: bold;
    color: rgb(105, 77, 117);
    margin-left: auto;
    margin-right: auto;
}

.order-total-checkout-container {
    text-align: center;
}

